feat: added theme context and code structure for styling the components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "jsx": "react-jsx",
       "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["./lib/components/*"]
+      "@components/*": ["./lib/components/*"],
+      "@theme/*":["./lib/theme/*"]
  
     }
 ,
