--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
-    "@pigment-css/react": "^0.0.30",
-    "@pigment-css/vite-plugin": "^0.0.30",
     "@storybook/addon-essentials": "^8.5.1",
     "@storybook/addon-interactions": "^8.5.1",
     "@storybook/addon-onboarding": "^8.5.1",
@@ -56,6 +54,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "3.0.4",
+    "@wyw-in-js/vite": "^0.5.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
@@ -72,6 +71,8 @@
     "vitest": "^3.0.4"
   },
   "dependencies": {
+    "@linaria/core": "^6.2.0",
+    "@linaria/react": "^6.2.1",
     "@react-aria/button": "^3.11.1",
     "@react-aria/focus": "^3.19.1",
     "@react-aria/interactions": "^3.23.0",
